<resources>
	<string name="app_name">Weather Kulina</string>
	<string name="action_settings">Settings</string>

	<string name="celcius">°C</string>

	<string name="city_name">City Name</string>
	<string name="current_loc">Current Location</string>

	<string name="transition_logo">transition logo</string>
	<string name="transition_title">transition title</string>
	<string name="transition_splash">transition splash</string>
</resources>
