<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/root"
	android:transitionName="@string/transition_splash"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorPrimary"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="id.kulina.exercise.kulinaexecise.Activity.SplashScreenActivity">

	<RelativeLayout
		android:id="@+id/lin_lay_logo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center">
		<ImageView
			android:id="@+id/iv_sun"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:src="@drawable/sun"
			android:transitionName="@string/transition_logo"
			android:layout_centerHorizontal="true"/>
		<LinearLayout
			android:id="@+id/lin_lay_title"
			android:layout_below="@id/iv_sun"
			android:layout_centerHorizontal="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:transitionName="@string/transition_title"
			android:layout_marginBottom="16dp"
			android:layout_gravity="center">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="24sp"
				android:text="Weather"
				android:textColor="@color/colorText"
				tools:ignore ="MissingPrefix"
				fontPath="fonts/OpenSans-ExtraBold.ttf"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="24sp"
				android:text="App"
				android:textColor="@color/colorText"
				tools:ignore ="MissingPrefix"
				fontPath="fonts/OpenSans-Light.ttf"/>
		</LinearLayout>
	</RelativeLayout>


</FrameLayout>
